--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/magickme/hatfinder#readme",
   "devDependencies": {
     "mocha": "^10.0.0"
+  },
+  "dependencies": {
+    "chai": "^4.3.6"
   }
 }
