--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^10.0.0"
   },
   "dependencies": {
-    "chai": "^4.3.6"
+    "chai": "^4.3.6",
+    "prompt-sync": "^4.2.0"
   }
 }
